# codeforces-submission

./: .gitignore  .gitmodules  Cargo.toml  README.md  compete.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: autoPR.yml
1484/: Cargo.toml
1485/: Cargo.toml
1487/: Cargo.toml
1490/: Cargo.toml
1491/: Cargo.toml
1492/: Cargo.toml
1493/: Cargo.toml
1494/: Cargo.toml
1496/: Cargo.toml
1497/: Cargo.toml
1498/: Cargo.toml
1499/: Cargo.toml
1501/: Cargo.toml
1504/: Cargo.toml
1506/: Cargo.toml
1511/: Cargo.toml
1512/: Cargo.toml
1513/: Cargo.toml
1517/: Cargo.toml
1519/: Cargo.toml
1520/: Cargo.toml
1521/: Cargo.toml
1523/: Cargo.toml
1526/: Cargo.toml
1527/: Cargo.toml
1529/: Cargo.toml
1530/: Cargo.toml
1535/: Cargo.toml
1536/: Cargo.toml
1537/: Cargo.toml
1541/: Cargo.toml
1542/: Cargo.toml
1551/: Cargo.toml
1555/: Cargo.toml
1560/: Cargo.toml
1623/: Cargo.toml
1692/: Cargo.toml
