[package]
name = "contest1487"
version = "0.1.0"
authors = ["uesugi6111 <59960488+aburaya6111@users.noreply.github.com>"]
edition = "2018"

[package.metadata.cargo-compete.bin]
contest1487-a = { alias = "a", problem = "https://codeforces.com/contest/1487/problem/A" }
contest1487-b = { alias = "b", problem = "https://codeforces.com/contest/1487/problem/B" }
contest1487-c = { alias = "c", problem = "https://codeforces.com/contest/1487/problem/C" }
contest1487-d = { alias = "d", problem = "https://codeforces.com/contest/1487/problem/D" }
contest1487-e = { alias = "e", problem = "https://codeforces.com/contest/1487/problem/E" }
contest1487-f = { alias = "f", problem = "https://codeforces.com/contest/1487/problem/F" }
contest1487-g = { alias = "g", problem = "https://codeforces.com/contest/1487/problem/G" }

[[bin]]
name = "contest1487-a"
path = "src/bin/a.rs"

[[bin]]
name = "contest1487-b"
path = "src/bin/b.rs"

[[bin]]
name = "contest1487-c"
path = "src/bin/c.rs"

[[bin]]
name = "contest1487-d"
path = "src/bin/d.rs"

[[bin]]
name = "contest1487-e"
path = "src/bin/e.rs"

[[bin]]
name = "contest1487-f"
path = "src/bin/f.rs"

[[bin]]
name = "contest1487-g"
path = "src/bin/g.rs"
[dependencies]
