[package]
name = "contest1490"
version = "0.1.0"
authors = ["uesugi6111 <59960488+aburaya6111@users.noreply.github.com>"]
edition = "2018"

[package.metadata.cargo-compete.bin]
contest1490-a = { alias = "a", problem = "https://codeforces.com/contest/1490/problem/A" }
contest1490-b = { alias = "b", problem = "https://codeforces.com/contest/1490/problem/B" }
contest1490-c = { alias = "c", problem = "https://codeforces.com/contest/1490/problem/C" }
contest1490-d = { alias = "d", problem = "https://codeforces.com/contest/1490/problem/D" }
contest1490-e = { alias = "e", problem = "https://codeforces.com/contest/1490/problem/E" }
contest1490-f = { alias = "f", problem = "https://codeforces.com/contest/1490/problem/F" }
contest1490-g = { alias = "g", problem = "https://codeforces.com/contest/1490/problem/G" }

[[bin]]
name = "contest1490-a"
path = "src/bin/a.rs"

[[bin]]
name = "contest1490-b"
path = "src/bin/b.rs"

[[bin]]
name = "contest1490-c"
path = "src/bin/c.rs"

[[bin]]
name = "contest1490-d"
path = "src/bin/d.rs"

[[bin]]
name = "contest1490-e"
path = "src/bin/e.rs"

[[bin]]
name = "contest1490-f"
path = "src/bin/f.rs"

[[bin]]
name = "contest1490-g"
path = "src/bin/g.rs"
[dependencies]
