[package]
name = "contest1491"
version = "0.1.0"
authors = ["uesugi6111 <59960488+aburaya6111@users.noreply.github.com>"]
edition = "2018"

[package.metadata.cargo-compete.bin]
contest1491-a = { alias = "a", problem = "https://codeforces.com/contest/1491/problem/A" }
contest1491-b = { alias = "b", problem = "https://codeforces.com/contest/1491/problem/B" }
contest1491-c = { alias = "c", problem = "https://codeforces.com/contest/1491/problem/C" }
contest1491-d = { alias = "d", problem = "https://codeforces.com/contest/1491/problem/D" }
contest1491-e = { alias = "e", problem = "https://codeforces.com/contest/1491/problem/E" }
contest1491-f = { alias = "f", problem = "https://codeforces.com/contest/1491/problem/F" }
contest1491-g = { alias = "g", problem = "https://codeforces.com/contest/1491/problem/G" }
contest1491-h = { alias = "h", problem = "https://codeforces.com/contest/1491/problem/H" }
contest1491-i = { alias = "i", problem = "https://codeforces.com/contest/1491/problem/I" }

[[bin]]
name = "contest1491-a"
path = "src/bin/a.rs"

[[bin]]
name = "contest1491-b"
path = "src/bin/b.rs"

[[bin]]
name = "contest1491-c"
path = "src/bin/c.rs"

[[bin]]
name = "contest1491-d"
path = "src/bin/d.rs"

[[bin]]
name = "contest1491-e"
path = "src/bin/e.rs"

[[bin]]
name = "contest1491-f"
path = "src/bin/f.rs"

[[bin]]
name = "contest1491-g"
path = "src/bin/g.rs"

[[bin]]
name = "contest1491-h"
path = "src/bin/h.rs"

[[bin]]
name = "contest1491-i"
path = "src/bin/i.rs"
[dependencies]
competitive-library = { path = "../competitive-library" }
