[package]
name = "contest1492"
version = "0.1.0"
authors = ["uesugi6111 <59960488+aburaya6111@users.noreply.github.com>"]
edition = "2018"

[package.metadata.cargo-compete.bin]
contest1492-a = { alias = "a", problem = "https://codeforces.com/contest/1492/problem/A" }
contest1492-b = { alias = "b", problem = "https://codeforces.com/contest/1492/problem/B" }
contest1492-c = { alias = "c", problem = "https://codeforces.com/contest/1492/problem/C" }
contest1492-d = { alias = "d", problem = "https://codeforces.com/contest/1492/problem/D" }
contest1492-e = { alias = "e", problem = "https://codeforces.com/contest/1492/problem/E" }

[[bin]]
name = "contest1492-a"
path = "src/bin/a.rs"

[[bin]]
name = "contest1492-b"
path = "src/bin/b.rs"

[[bin]]
name = "contest1492-c"
path = "src/bin/c.rs"

[[bin]]
name = "contest1492-d"
path = "src/bin/d.rs"

[[bin]]
name = "contest1492-e"
path = "src/bin/e.rs"
[dependencies]
competitive-library = { path = "../competitive-library" }
