[package]
name = "contest1493"
version = "0.1.0"
authors = ["uesugi6111 <59960488+aburaya6111@users.noreply.github.com>"]
edition = "2018"

[package.metadata.cargo-compete.bin]
contest1493-a = { alias = "a", problem = "https://codeforces.com/contest/1493/problem/A" }
contest1493-b = { alias = "b", problem = "https://codeforces.com/contest/1493/problem/B" }
contest1493-c = { alias = "c", problem = "https://codeforces.com/contest/1493/problem/C" }
contest1493-d = { alias = "d", problem = "https://codeforces.com/contest/1493/problem/D" }
contest1493-e = { alias = "e", problem = "https://codeforces.com/contest/1493/problem/E" }
contest1493-f = { alias = "f", problem = "https://codeforces.com/contest/1493/problem/F" }

[[bin]]
name = "contest1493-a"
path = "src/bin/a.rs"

[[bin]]
name = "contest1493-b"
path = "src/bin/b.rs"

[[bin]]
name = "contest1493-c"
path = "src/bin/c.rs"

[[bin]]
name = "contest1493-d"
path = "src/bin/d.rs"

[[bin]]
name = "contest1493-e"
path = "src/bin/e.rs"

[[bin]]
name = "contest1493-f"
path = "src/bin/f.rs"
[dependencies]
competitive-library = { path = "../competitive-library" }
