[package]
name = "contest1497"
version = "0.1.0"
authors = ["uesugi6111 <59960488+aburaya6111@users.noreply.github.com>"]
edition = "2018"

[package.metadata.cargo-compete.bin]
contest1497-a = { alias = "a", problem = "https://codeforces.com/contest/1497/problem/A" }
contest1497-b = { alias = "b", problem = "https://codeforces.com/contest/1497/problem/B" }
contest1497-c1 = { alias = "c1", problem = "https://codeforces.com/contest/1497/problem/C1" }
contest1497-c2 = { alias = "c2", problem = "https://codeforces.com/contest/1497/problem/C2" }
contest1497-d = { alias = "d", problem = "https://codeforces.com/contest/1497/problem/D" }
contest1497-e1 = { alias = "e1", problem = "https://codeforces.com/contest/1497/problem/E1" }
contest1497-e2 = { alias = "e2", problem = "https://codeforces.com/contest/1497/problem/E2" }

[[bin]]
name = "contest1497-a"
path = "src/bin/a.rs"

[[bin]]
name = "contest1497-b"
path = "src/bin/b.rs"

[[bin]]
name = "contest1497-c1"
path = "src/bin/c1.rs"

[[bin]]
name = "contest1497-c2"
path = "src/bin/c2.rs"

[[bin]]
name = "contest1497-d"
path = "src/bin/d.rs"

[[bin]]
name = "contest1497-e1"
path = "src/bin/e1.rs"

[[bin]]
name = "contest1497-e2"
path = "src/bin/e2.rs"
[dependencies]
competitive-library = { path = "../competitive-library" }
