[package]
name = "contest1498"
version = "0.1.0"
authors = ["uesugi6111 <59960488+aburaya6111@users.noreply.github.com>"]
edition = "2018"

[package.metadata.cargo-compete.bin]
contest1498-a = { alias = "a", problem = "https://codeforces.com/contest/1498/problem/A" }
contest1498-b = { alias = "b", problem = "https://codeforces.com/contest/1498/problem/B" }
contest1498-c = { alias = "c", problem = "https://codeforces.com/contest/1498/problem/C" }
contest1498-d = { alias = "d", problem = "https://codeforces.com/contest/1498/problem/D" }
contest1498-e = { alias = "e", problem = "https://codeforces.com/contest/1498/problem/E" }
contest1498-f = { alias = "f", problem = "https://codeforces.com/contest/1498/problem/F" }

[[bin]]
name = "contest1498-a"
path = "src/bin/a.rs"

[[bin]]
name = "contest1498-b"
path = "src/bin/b.rs"

[[bin]]
name = "contest1498-c"
path = "src/bin/c.rs"

[[bin]]
name = "contest1498-d"
path = "src/bin/d.rs"

[[bin]]
name = "contest1498-e"
path = "src/bin/e.rs"

[[bin]]
name = "contest1498-f"
path = "src/bin/f.rs"
[dependencies]
competitive-library = { path = "../competitive-library" }
