[package]
name = "contest1499"
version = "0.1.0"
authors = ["uesugi6111 <59960488+aburaya6111@users.noreply.github.com>"]
edition = "2018"

[package.metadata.cargo-compete.bin]
contest1499-a = { alias = "a", problem = "https://codeforces.com/contest/1499/problem/A" }
contest1499-b = { alias = "b", problem = "https://codeforces.com/contest/1499/problem/B" }
contest1499-c = { alias = "c", problem = "https://codeforces.com/contest/1499/problem/C" }
contest1499-d = { alias = "d", problem = "https://codeforces.com/contest/1499/problem/D" }
contest1499-e = { alias = "e", problem = "https://codeforces.com/contest/1499/problem/E" }
contest1499-f = { alias = "f", problem = "https://codeforces.com/contest/1499/problem/F" }
contest1499-g = { alias = "g", problem = "https://codeforces.com/contest/1499/problem/G" }

[[bin]]
name = "contest1499-a"
path = "src/bin/a.rs"

[[bin]]
name = "contest1499-b"
path = "src/bin/b.rs"

[[bin]]
name = "contest1499-c"
path = "src/bin/c.rs"

[[bin]]
name = "contest1499-d"
path = "src/bin/d.rs"

[[bin]]
name = "contest1499-e"
path = "src/bin/e.rs"

[[bin]]
name = "contest1499-f"
path = "src/bin/f.rs"

[[bin]]
name = "contest1499-g"
path = "src/bin/g.rs"
[dependencies]
competitive-library = { path = "../competitive-library" }
