[package]
name = "contest1501"
version = "0.1.0"
authors = ["uesugi6111 <59960488+aburaya6111@users.noreply.github.com>"]
edition = "2018"

[package.metadata.cargo-compete.bin]
contest1501-a = { alias = "a", problem = "https://codeforces.com/contest/1501/problem/A" }
contest1501-b = { alias = "b", problem = "https://codeforces.com/contest/1501/problem/B" }
contest1501-c = { alias = "c", problem = "https://codeforces.com/contest/1501/problem/C" }
contest1501-d = { alias = "d", problem = "https://codeforces.com/contest/1501/problem/D" }
contest1501-e = { alias = "e", problem = "https://codeforces.com/contest/1501/problem/E" }
contest1501-f = { alias = "f", problem = "https://codeforces.com/contest/1501/problem/F" }

[[bin]]
name = "contest1501-a"
path = "src/bin/a.rs"

[[bin]]
name = "contest1501-b"
path = "src/bin/b.rs"

[[bin]]
name = "contest1501-c"
path = "src/bin/c.rs"

[[bin]]
name = "contest1501-d"
path = "src/bin/d.rs"

[[bin]]
name = "contest1501-e"
path = "src/bin/e.rs"

[[bin]]
name = "contest1501-f"
path = "src/bin/f.rs"
[dependencies]
competitive-library = { path = "../competitive-library" }
