[package]
name = "contest1504"
version = "0.1.0"
authors = ["uesugi6111 <59960488+aburaya6111@users.noreply.github.com>"]
edition = "2018"

[package.metadata.cargo-compete.bin]
contest1504-a = { alias = "a", problem = "https://codeforces.com/contest/1504/problem/A" }
contest1504-b = { alias = "b", problem = "https://codeforces.com/contest/1504/problem/B" }
contest1504-c = { alias = "c", problem = "https://codeforces.com/contest/1504/problem/C" }
contest1504-d = { alias = "d", problem = "https://codeforces.com/contest/1504/problem/D" }
contest1504-e = { alias = "e", problem = "https://codeforces.com/contest/1504/problem/E" }
contest1504-f = { alias = "f", problem = "https://codeforces.com/contest/1504/problem/F" }

[[bin]]
name = "contest1504-a"
path = "src/bin/a.rs"

[[bin]]
name = "contest1504-b"
path = "src/bin/b.rs"

[[bin]]
name = "contest1504-c"
path = "src/bin/c.rs"

[[bin]]
name = "contest1504-d"
path = "src/bin/d.rs"

[[bin]]
name = "contest1504-e"
path = "src/bin/e.rs"

[[bin]]
name = "contest1504-f"
path = "src/bin/f.rs"
[dependencies]
competitive-library = { path = "../competitive-library" }
