[package]
name = "contest1513"
version = "0.1.0"
authors = ["uesugi6111 <59960488+aburaya6111@users.noreply.github.com>"]
edition = "2018"

[package.metadata.cargo-compete.bin]
contest1513-a = { alias = "a", problem = "https://codeforces.com/contest/1513/problem/A" }
contest1513-b = { alias = "b", problem = "https://codeforces.com/contest/1513/problem/B" }
contest1513-c = { alias = "c", problem = "https://codeforces.com/contest/1513/problem/C" }
contest1513-d = { alias = "d", problem = "https://codeforces.com/contest/1513/problem/D" }
contest1513-e = { alias = "e", problem = "https://codeforces.com/contest/1513/problem/E" }
contest1513-f = { alias = "f", problem = "https://codeforces.com/contest/1513/problem/F" }

[[bin]]
name = "contest1513-a"
path = "src/bin/a.rs"

[[bin]]
name = "contest1513-b"
path = "src/bin/b.rs"

[[bin]]
name = "contest1513-c"
path = "src/bin/c.rs"

[[bin]]
name = "contest1513-d"
path = "src/bin/d.rs"

[[bin]]
name = "contest1513-e"
path = "src/bin/e.rs"

[[bin]]
name = "contest1513-f"
path = "src/bin/f.rs"
[dependencies]
competitive-library = { path = "../competitive-library" }
[dev-dependencies]
