[package]
name = "contest1521"
version = "0.1.0"
authors = ["uesugi6111 <59960488+aburaya6111@users.noreply.github.com>"]
edition = "2018"

[package.metadata.cargo-compete.bin]
contest1521-a = { alias = "a", problem = "https://codeforces.com/contest/1521/problem/A" }
contest1521-b = { alias = "b", problem = "https://codeforces.com/contest/1521/problem/B" }
contest1521-c = { alias = "c", problem = "https://codeforces.com/contest/1521/problem/C" }
contest1521-d = { alias = "d", problem = "https://codeforces.com/contest/1521/problem/D" }
contest1521-e = { alias = "e", problem = "https://codeforces.com/contest/1521/problem/E" }

[[bin]]
name = "contest1521-a"
path = "src/bin/a.rs"

[[bin]]
name = "contest1521-b"
path = "src/bin/b.rs"

[[bin]]
name = "contest1521-c"
path = "src/bin/c.rs"

[[bin]]
name = "contest1521-d"
path = "src/bin/d.rs"

[[bin]]
name = "contest1521-e"
path = "src/bin/e.rs"
[dependencies]
competitive-library = { path = "../competitive-library" }
[dev-dependencies]
