[package]
name = "contest1523"
version = "0.1.0"
authors = ["uesugi6111 <59960488+aburaya6111@users.noreply.github.com>"]
edition = "2018"

[package.metadata.cargo-compete.bin]
contest1523-a = { alias = "a", problem = "https://codeforces.com/contest/1523/problem/A" }
contest1523-b = { alias = "b", problem = "https://codeforces.com/contest/1523/problem/B" }
contest1523-c = { alias = "c", problem = "https://codeforces.com/contest/1523/problem/C" }
contest1523-d = { alias = "d", problem = "https://codeforces.com/contest/1523/problem/D" }
contest1523-e = { alias = "e", problem = "https://codeforces.com/contest/1523/problem/E" }
contest1523-f = { alias = "f", problem = "https://codeforces.com/contest/1523/problem/F" }
contest1523-g = { alias = "g", problem = "https://codeforces.com/contest/1523/problem/G" }
contest1523-h = { alias = "h", problem = "https://codeforces.com/contest/1523/problem/H" }

[[bin]]
name = "contest1523-a"
path = "src/bin/a.rs"

[[bin]]
name = "contest1523-b"
path = "src/bin/b.rs"

[[bin]]
name = "contest1523-c"
path = "src/bin/c.rs"

[[bin]]
name = "contest1523-d"
path = "src/bin/d.rs"

[[bin]]
name = "contest1523-e"
path = "src/bin/e.rs"

[[bin]]
name = "contest1523-f"
path = "src/bin/f.rs"

[[bin]]
name = "contest1523-g"
path = "src/bin/g.rs"

[[bin]]
name = "contest1523-h"
path = "src/bin/h.rs"
[dependencies]
competitive-library = { path = "../competitive-library" }
[dev-dependencies]
