[package]
name = "contest1526"
version = "0.1.0"
authors = ["uesugi6111 <59960488+aburaya6111@users.noreply.github.com>"]
edition = "2018"

[package.metadata.cargo-compete.bin]
contest1526-a = { alias = "a", problem = "https://codeforces.com/contest/1526/problem/A" }
contest1526-b = { alias = "b", problem = "https://codeforces.com/contest/1526/problem/B" }
contest1526-c1 = { alias = "c1", problem = "https://codeforces.com/contest/1526/problem/C1" }
contest1526-c2 = { alias = "c2", problem = "https://codeforces.com/contest/1526/problem/C2" }
contest1526-d = { alias = "d", problem = "https://codeforces.com/contest/1526/problem/D" }
contest1526-e = { alias = "e", problem = "https://codeforces.com/contest/1526/problem/E" }
contest1526-f = { alias = "f", problem = "https://codeforces.com/contest/1526/problem/F" }

[[bin]]
name = "contest1526-a"
path = "src/bin/a.rs"

[[bin]]
name = "contest1526-b"
path = "src/bin/b.rs"

[[bin]]
name = "contest1526-c1"
path = "src/bin/c1.rs"

[[bin]]
name = "contest1526-c2"
path = "src/bin/c2.rs"

[[bin]]
name = "contest1526-d"
path = "src/bin/d.rs"

[[bin]]
name = "contest1526-e"
path = "src/bin/e.rs"

[[bin]]
name = "contest1526-f"
path = "src/bin/f.rs"
[dependencies]
competitive-library = { path = "../competitive-library" }
[dev-dependencies]
