[package]
name = "contest1527"
version = "0.1.0"
authors = ["uesugi6111 <59960488+aburaya6111@users.noreply.github.com>"]
edition = "2018"

[package.metadata.cargo-compete.bin]
contest1527-a = { alias = "a", problem = "https://codeforces.com/contest/1527/problem/A" }
contest1527-b1 = { alias = "b1", problem = "https://codeforces.com/contest/1527/problem/B1" }
contest1527-b2 = { alias = "b2", problem = "https://codeforces.com/contest/1527/problem/B2" }
contest1527-c = { alias = "c", problem = "https://codeforces.com/contest/1527/problem/C" }
contest1527-d = { alias = "d", problem = "https://codeforces.com/contest/1527/problem/D" }
contest1527-e = { alias = "e", problem = "https://codeforces.com/contest/1527/problem/E" }

[[bin]]
name = "contest1527-a"
path = "src/bin/a.rs"

[[bin]]
name = "contest1527-b1"
path = "src/bin/b1.rs"

[[bin]]
name = "contest1527-b2"
path = "src/bin/b2.rs"

[[bin]]
name = "contest1527-c"
path = "src/bin/c.rs"

[[bin]]
name = "contest1527-d"
path = "src/bin/d.rs"

[[bin]]
name = "contest1527-e"
path = "src/bin/e.rs"
[dependencies]
competitive-library = { path = "../competitive-library" }
[dev-dependencies]
