[package]
name = "contest1530"
version = "0.1.0"
authors = ["uesugi6111 <59960488+aburaya6111@users.noreply.github.com>"]
edition = "2018"

[package.metadata.cargo-compete.bin]
contest1530-a = { alias = "a", problem = "https://codeforces.com/contest/1530/problem/A" }
contest1530-b = { alias = "b", problem = "https://codeforces.com/contest/1530/problem/B" }
contest1530-c = { alias = "c", problem = "https://codeforces.com/contest/1530/problem/C" }
contest1530-d = { alias = "d", problem = "https://codeforces.com/contest/1530/problem/D" }
contest1530-e = { alias = "e", problem = "https://codeforces.com/contest/1530/problem/E" }
contest1530-f = { alias = "f", problem = "https://codeforces.com/contest/1530/problem/F" }
contest1530-g = { alias = "g", problem = "https://codeforces.com/contest/1530/problem/G" }
contest1530-h = { alias = "h", problem = "https://codeforces.com/contest/1530/problem/H" }

[[bin]]
name = "contest1530-a"
path = "src/bin/a.rs"

[[bin]]
name = "contest1530-b"
path = "src/bin/b.rs"

[[bin]]
name = "contest1530-c"
path = "src/bin/c.rs"

[[bin]]
name = "contest1530-d"
path = "src/bin/d.rs"

[[bin]]
name = "contest1530-e"
path = "src/bin/e.rs"

[[bin]]
name = "contest1530-f"
path = "src/bin/f.rs"

[[bin]]
name = "contest1530-g"
path = "src/bin/g.rs"

[[bin]]
name = "contest1530-h"
path = "src/bin/h.rs"
[dependencies]
competitive-library = { path = "../competitive-library" }
[dev-dependencies]
