[package]
name = "contest1535"
version = "0.1.0"
authors = ["uesugi6111 <59960488+aburaya6111@users.noreply.github.com>"]
edition = "2018"

[package.metadata.cargo-compete.bin]
contest1535-a = { alias = "a", problem = "https://codeforces.com/contest/1535/problem/A" }
contest1535-b = { alias = "b", problem = "https://codeforces.com/contest/1535/problem/B" }
contest1535-c = { alias = "c", problem = "https://codeforces.com/contest/1535/problem/C" }
contest1535-d = { alias = "d", problem = "https://codeforces.com/contest/1535/problem/D" }
contest1535-e = { alias = "e", problem = "https://codeforces.com/contest/1535/problem/E" }
contest1535-f = { alias = "f", problem = "https://codeforces.com/contest/1535/problem/F" }

[[bin]]
name = "contest1535-a"
path = "src/bin/a.rs"

[[bin]]
name = "contest1535-b"
path = "src/bin/b.rs"

[[bin]]
name = "contest1535-c"
path = "src/bin/c.rs"

[[bin]]
name = "contest1535-d"
path = "src/bin/d.rs"

[[bin]]
name = "contest1535-e"
path = "src/bin/e.rs"

[[bin]]
name = "contest1535-f"
path = "src/bin/f.rs"
[dependencies]
competitive-library = { path = "../competitive-library" }
[dev-dependencies]
