[package]
name = "contest1536"
version = "0.1.0"
authors = ["uesugi6111 <59960488+aburaya6111@users.noreply.github.com>"]
edition = "2018"

[package.metadata.cargo-compete.bin]
contest1536-a = { alias = "a", problem = "https://codeforces.com/contest/1536/problem/A" }
contest1536-b = { alias = "b", problem = "https://codeforces.com/contest/1536/problem/B" }
contest1536-c = { alias = "c", problem = "https://codeforces.com/contest/1536/problem/C" }
contest1536-d = { alias = "d", problem = "https://codeforces.com/contest/1536/problem/D" }
contest1536-e = { alias = "e", problem = "https://codeforces.com/contest/1536/problem/E" }
contest1536-f = { alias = "f", problem = "https://codeforces.com/contest/1536/problem/F" }

[[bin]]
name = "contest1536-a"
path = "src/bin/a.rs"

[[bin]]
name = "contest1536-b"
path = "src/bin/b.rs"

[[bin]]
name = "contest1536-c"
path = "src/bin/c.rs"

[[bin]]
name = "contest1536-d"
path = "src/bin/d.rs"

[[bin]]
name = "contest1536-e"
path = "src/bin/e.rs"

[[bin]]
name = "contest1536-f"
path = "src/bin/f.rs"
[dependencies]
competitive-library = { path = "../competitive-library" }
[dev-dependencies]
