[package]
name = "contest1541"
version = "0.1.0"
authors = ["uesugi6111 <59960488+aburaya6111@users.noreply.github.com>"]
edition = "2018"

[package.metadata.cargo-compete.bin]
contest1541-a = { alias = "a", problem = "https://codeforces.com/contest/1541/problem/A" }
contest1541-b = { alias = "b", problem = "https://codeforces.com/contest/1541/problem/B" }
contest1541-c = { alias = "c", problem = "https://codeforces.com/contest/1541/problem/C" }
contest1541-d = { alias = "d", problem = "https://codeforces.com/contest/1541/problem/D" }
contest1541-e1 = { alias = "e1", problem = "https://codeforces.com/contest/1541/problem/E1" }
contest1541-e2 = { alias = "e2", problem = "https://codeforces.com/contest/1541/problem/E2" }

[[bin]]
name = "contest1541-a"
path = "src/bin/a.rs"

[[bin]]
name = "contest1541-b"
path = "src/bin/b.rs"

[[bin]]
name = "contest1541-c"
path = "src/bin/c.rs"

[[bin]]
name = "contest1541-d"
path = "src/bin/d.rs"

[[bin]]
name = "contest1541-e1"
path = "src/bin/e1.rs"

[[bin]]
name = "contest1541-e2"
path = "src/bin/e2.rs"
[dependencies]
competitive-library = { path = "../competitive-library" }
[dev-dependencies]
