[package]
name = "contest1560"
version = "0.1.0"
authors = ["uesugi6111 <59960488+aburaya6111@users.noreply.github.com>"]
edition = "2018"

[package.metadata.cargo-compete.bin]
contest1555-a = { alias = "a", problem = "https://codeforces.com/contest/1560/problem/A" }
contest1555-b = { alias = "b", problem = "https://codeforces.com/contest/1560/problem/B" }
contest1555-c = { alias = "c", problem = "https://codeforces.com/contest/1560/problem/C" }
contest1555-d = { alias = "d", problem = "https://codeforces.com/contest/1560/problem/D" }
contest1555-e = { alias = "e", problem = "https://codeforces.com/contest/1560/problem/E" }
contest1555-f = { alias = "f", problem = "https://codeforces.com/contest/1560/problem/F" }

[[bin]]
name = "contest1560-a"
path = "src/bin/a.rs"

[[bin]]
name = "contest1560-b"
path = "src/bin/b.rs"

[[bin]]
name = "contest1560-c"
path = "src/bin/c.rs"

[[bin]]
name = "contest1560-d"
path = "src/bin/d.rs"

[[bin]]
name = "contest1560-e"
path = "src/bin/e.rs"

[[bin]]
name = "contest1560-f"
path = "src/bin/f.rs"
[dependencies]
competitive-library = { path = "../competitive-library" }
[dev-dependencies]
